<resources>
    <string name="app_name">AirlineApp</string>
    <string name="one_way">one way</string>
    <string name="type">Type</string>
    <string name="depart">depart</string>
    <string name="Banglore">Banglore</string>
    <string name="BLR">BLR</string>
    <string name="to">To</string>
    <string name="MYQ">MYQ</string>
    <string name="Mysore">Mysore</string>
    <string name="from">From</string>
    <string name="dash">1200/-</string>
    <string name="_21_001">1500/-</string>
    <string name="bom">BOM</string>
    <string name="hrs">hrs</string>
    <string name="_2">2</string>
    <string name="_21_00">21:00</string>
    <string name="arrow">arrow</string>
    <string name="_20_00">20:00</string>
    <string name="flight">AirAsia</string>
    <string name="flightImage">flightImage</string>
    <string name="book_flight">bookFlight</string>
    <string name="_4000">3000</string>
    <string name="total_fare">Totalfare</string>
    <string name="passengers">Passengers</string>
    <string name="_2000">1500</string>
    <string name="price_per_head">PricePerHead</string>
    <string name="date">Date:</string>
    <string name="airline">airline</string>
    <string name="dept">dept</string>
    <string name="pass">pass</string>
    <string name="fare">fare</string>
    <string name="_2200">1500</string>
    <string name="arr">arrival</string>
    <string name="date1">21/04/2021</string>
    <string name="flight2">IndiGo</string>
    <string name="_1800">1800/-</string>
    <string name="_20001">1500/-</string>
    <string name="airasia">AirAsia</string>
    <string name="bengalore">Bengalore</string>
    <string name="bangalore">Bangalore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
</resources>